--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^10.10.0",
+    "gh-pages": "^6.1.1",
     "lucide-react": "^0.364.0",
     "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
