--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tippy.js/react": "^3.1.1",
+    "@tippyjs/react": "^4.2.6",
     "firebase": "^10.10.0",
     "gh-pages": "^6.1.1",
     "lucide-react": "^0.364.0",
@@ -16,6 +18,8 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
+    "tippy.js": "^6.3.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
